--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -93,6 +93,29 @@
                     />
             </FrameLayout>
 
+            <FrameLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="end"
+                >
+                <de.hdodenhof.circleimageview.CircleImageView
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:src="@color/color_primary_trans"
+                    android:layout_gravity="center"
+                    />
+                <ImageView
+                    android:id="@+id/imageLogout"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:src="@drawable/ic_logout"
+                    android:tint="@color/white"
+                    android:layout_gravity="center"
+                    android:padding="5dp"
+
+                    />
+            </FrameLayout>
+
 
 
         </androidx.appcompat.widget.Toolbar>
