--- a/app/src/main/res/layout/activity_order_details.xml
+++ b/app/src/main/res/layout/activity_order_details.xml
@@ -6,11 +6,17 @@
     >
     <data>
         <variable
-            name="model"
-            type="com.jahezly.models.AddOrderModel" />
-        <variable
             name="lang"
             type="String" />
+        <variable
+            name="orderModel"
+            type="com.jahezly.models.OrderModel" />
+        <variable
+            name="backListener"
+            type="com.jahezly.interfaces.Listeners.BackListener" />
+        <import type="android.view.View"/>
+
+
     </data>
     <LinearLayout
         android:layout_width="match_parent"
@@ -35,6 +41,7 @@
                 android:gravity="center_vertical"
                 android:layout_marginStart="8dp"
                 android:layout_marginEnd="8dp"
+                android:onClick="@{()->backListener.back()}"
                 >
                 <ImageView
                     android:layout_width="30dp"
@@ -101,6 +108,7 @@
                         app:layout_constraintTop_toBottomOf="@id/tv1"
                         app:layout_constraintStart_toStartOf="@id/tv1"
                         app:layout_constraintEnd_toEndOf="parent"
+                        android:text="@{orderModel.client.name}"
                         />
                 </androidx.constraintlayout.widget.ConstraintLayout>
                 <View
@@ -147,6 +155,7 @@
                         app:layout_constraintTop_toBottomOf="@id/tv2"
                         app:layout_constraintStart_toStartOf="@id/tv2"
                         app:layout_constraintEnd_toEndOf="parent"
+                        android:text="@{orderModel.client.phone}"
                         />
                 </androidx.constraintlayout.widget.ConstraintLayout>
                 <View
@@ -194,6 +203,7 @@
                         app:layout_constraintTop_toBottomOf="@id/tv3"
                         app:layout_constraintStart_toStartOf="@id/tv3"
                         app:layout_constraintEnd_toEndOf="parent"
+                        date='@{Long.parseLong(orderModel.order_date)}'
                         />
                 </androidx.constraintlayout.widget.ConstraintLayout>
                 <View
@@ -240,6 +250,8 @@
                         app:layout_constraintTop_toBottomOf="@id/tv4"
                         app:layout_constraintStart_toStartOf="@id/tv4"
                         app:layout_constraintEnd_toEndOf="parent"
+                        time='@{Long.parseLong(orderModel.order_time)}'
+
                         />
                 </androidx.constraintlayout.widget.ConstraintLayout>
                 <View
@@ -287,6 +299,7 @@
                         app:layout_constraintTop_toBottomOf="@id/tv5"
                         app:layout_constraintStart_toStartOf="@id/tv5"
                         app:layout_constraintEnd_toEndOf="parent"
+                        android:text='@{orderModel.session_place.equals("in")?@string/inside:@string/outside}'
                         />
                 </androidx.constraintlayout.widget.ConstraintLayout>
                 <View
@@ -334,6 +347,7 @@
                         app:layout_constraintTop_toBottomOf="@id/tv6"
                         app:layout_constraintStart_toStartOf="@id/tv6"
                         app:layout_constraintEnd_toEndOf="parent"
+                        android:text="@{orderModel.number_of_person}"
                         />
                 </androidx.constraintlayout.widget.ConstraintLayout>
                 <View
@@ -341,6 +355,7 @@
                     android:layout_height="1px"
                     android:background="@color/gray5"
                     android:layout_marginTop="10dp"/>
+
 
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
@@ -372,7 +387,7 @@
                         />
 
                     <TextView
-                        android:id="@+id/tvChildrenNumber"
+                        android:id="@+id/tvChildNumber"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:textColor="@color/black"
@@ -380,6 +395,7 @@
                         app:layout_constraintTop_toBottomOf="@id/tv7"
                         app:layout_constraintStart_toStartOf="@id/tv7"
                         app:layout_constraintEnd_toEndOf="parent"
+                        android:text="@{orderModel.number_of_child}"
                         />
                 </androidx.constraintlayout.widget.ConstraintLayout>
                 <View
@@ -389,48 +405,61 @@
                     android:layout_marginTop="10dp"/>
 
 
-                <androidx.constraintlayout.widget.ConstraintLayout
+
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="8dp"
+                    android:orientation="vertical"
+                    android:layout_marginTop="10dp"
+                    android:visibility="@{orderModel.foods!=null?(orderModel.foods.size()>0?View.VISIBLE:View.GONE):View.GONE}"
                     >
-                    <ImageView
-                        android:id="@+id/icon8"
-                        android:layout_width="50dp"
-                        android:layout_height="50dp"
-                        app:layout_constraintTop_toTopOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"
-                        android:background="@drawable/circle_primary"
-                        android:src="@drawable/ic_fork"
-                        android:tint="@color/white"
-                        android:padding="12dp"
-                        />
                     <TextView
-                        android:id="@+id/tv8"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:textColor="@color/gray5"
-                        android:textSize="15sp"
-                        app:layout_constraintTop_toTopOf="@id/icon8"
-                        app:layout_constraintBottom_toBottomOf="@id/icon8"
-                        app:layout_constraintStart_toEndOf="@id/icon8"
-                        android:layout_marginStart="10dp"
-                        android:layout_marginEnd="10dp"
+                        android:textColor="@color/black"
+                        android:textSize="16sp"
+                        android:textStyle="bold"
                         android:text="@string/orders"
                         />
-                    <ImageView
-                        android:layout_width="30dp"
-                        android:layout_height="30dp"
-                        app:layout_constraintTop_toTopOf="@id/icon8"
-                        app:layout_constraintBottom_toBottomOf="@id/icon8"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        android:src="@drawable/ic_right_arrow"
-                        android:padding="8dp"
-                        android:rotation='@{lang.equals("ar")?180:0}'
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/recViewFoods"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="20dp"/>
+                </LinearLayout>
 
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/black"
+                    android:textSize="16sp"
+                    android:textStyle="bold"
+                    android:text="@string/drinks"
+                    android:layout_marginTop="10dp"
+                    />
+                <FrameLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+
+                    >
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/recViewDrink"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="10dp"
                         />
-
-                </androidx.constraintlayout.widget.ConstraintLayout>
+                    <TextView
+                        android:id="@+id/tvNoDrink"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:textColor="@color/black"
+                        android:textSize="15sp"
+                        android:text="@string/no_drinks"
+                        android:visibility="gone"
+                        />
+                </FrameLayout>
             </LinearLayout>
 
         </androidx.core.widget.NestedScrollView>
