--- a/app/src/main/res/layout/activity_reserve_order.xml
+++ b/app/src/main/res/layout/activity_reserve_order.xml
@@ -11,6 +11,9 @@
         <variable
             name="lang"
             type="String" />
+        <variable
+            name="backListener"
+            type="com.jahezly.interfaces.Listeners.BackListener" />
     </data>
     <LinearLayout
         android:layout_width="match_parent"
@@ -35,6 +38,8 @@
                 android:gravity="center_vertical"
                 android:layout_marginStart="8dp"
                 android:layout_marginEnd="8dp"
+                android:onClick="@{()->backListener.back()}"
+
                 >
                 <ImageView
                     android:layout_width="30dp"
@@ -140,6 +145,7 @@
                         android:textColor="@color/black"
                         android:textSize="15sp"
                         android:inputType="number"
+                        android:maxLength="9"
                         android:text="@={model.phone}"
                         error="@{model.error_phone}"
                         />
